NIFI-13192 Upgraded AWS S3 Processors and others to AWS SDK 2 (#10460)
- Removed references to AWS SDK 1 from AWS bundles

Signed-off-by: David Handermann <exceptionfactory@apache.org>